--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ div > p {
     display: inline-block;
     border-radius: 10px;
     color: white;
+    
 }
 
 #flor {
@@ -65,6 +66,7 @@ footer {
     background-color: black;
     color: grey;
     padding: 10px;
+    font-size: 2vh;
 }
 
 footer a {
